--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ nav ul li{
 	text-transform: capitalize;
 }
 h1{
-	color: white;
+	color: rgb(0, 0, 0);
 	margin: 20px 0px 20px;
 	font-size: 75px;
 }
